exports[`Functional tests node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "Rex",
    },
  },
}
`;

exports[`Functional tests query connection 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animals": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Rex",
            },
          },
          Object {
            "node": Object {
              "name": "Felix",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`Functional tests query one 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animal": Object {
        "name": "Rex",
      },
    },
  },
}
`;
